# python-sdk

./: README.md  pyproject.toml
.github/workflows/: publish.yml
eveses/: __init__.py  activations.py  catalog.py  client.py  exceptions.py  wallet.py  webhooks.py
examples/: README.md  buy_and_poll.py  quickstart.py  webhook_server.py
tests/: test_catalog.py  test_client.py
